# FinEst-Workshop

./: setup.cfg
binder/: environment.yml
ci/: environment.yml
source/: conf.py  index.rst
source/course-info/: attribution.rst  installing-miniconda.rst
source/exercises/: exercise-1.rst
source/lessons/: introduction.rst
source/notebooks/data_access/: download_elevation_data.ipynb  index.rst  intro_to_wms.ipynb
source/notebooks/geoprocessing/: index.rst  intro-to-python-geostack.ipynb  spatial_network_analysis.ipynb
