[metadata]
name = Python for Geospatial Data
version = 2023
license = MIT
description = FinEst PhD School - Python for Geospatial Data
author = Henrikki Tenkanen
author_email = henrikki.tenkanen@aalto.fi
url = http://finest.readthedocs.io/
classifiers =
	Development Status :: 2 -
	Environment :: Web Environment
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = htenkanen
github_repo = FinEst-Workshop